bk_ida/gccida/g1/parmlist_tags_warning
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parmlist_tags_warning/src/c-decl.c:5949:7: error: use of undeclared identifier 'already_0'
if ( !already_0 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parmlist_tags_warning/src/c-decl.c:5952:1: error: use of undeclared identifier 'already_0'
already_0 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/parmlist_tags_warning/src/obj/c-decl.o] Error 1
